# synesis

./: .editorconfig  .gitignore  .yamllint.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  cloudcosts.md  models.yaml  pyproject.toml  test_report_20260304_160220.yaml  test_report_20260304_162902.yaml  test_report_20260304_171253.yaml
.cursor/rules/: entry-classifier-invariants.mdc  langgraph-state-safety.mdc  model-alignment.mdc  synesis-constitution.mdc
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-images.yml  lint.yml  security.yml
base/admin/: Dockerfile  deployment.yaml  kustomization.yaml  requirements.txt  route.yaml  service.yaml
base/gateway/: kustomization.yaml  litellm-config-blackwell.yaml  litellm-config.yaml  litellm-deployment.yaml  litellm-route.yaml  litellm-secrets.yaml  litellm-service.yaml  (+1 more)
docs/: ANEMIC_SUPERVISOR_PLAN.md  BLACKWELL_ARCHITECTURE.md  CONVERSATION_MEMORY.md  COST_ESTIMATE.md  DEVELOPMENT_CHECKS.md  FAILURE_KB.md  FEEDBACK_API.md  GPU_TOPOLOGY.md  HARDWARE_SIZING.md  HIGH_VALUE_ADDITIONS.md  IDE_CLIENT_COORDINATION.md  INDEXERS.md  INTENT_TAXONOMY.md  LORA_TRAINING_GUIDE.md  LSP.md  MODEL_ARCHITECTURE_PROPOSAL.md  MODEL_EXERCISE.md  MODEL_SELECTION.md  OBSERVABILITY.md  OPENWEBUI.md  OPENWEBUI_ADMIN_GUIDE.md  OPENWEBUI_PHASES.md  PLAN-domain-aligner-universal-expertise.md  PLAN-federated-rag-strategic-advisor.md  PLANNED_REFINEMENTS.md  PLAN_CLASSIFIER_UX_IMPROVEMENTS.md  PLAN_REMAINING_WORK.md  RAG.md  SANDBOX.md  STREAMING_BUFFERING.md  TAXONOMY.md  TAXONOMY_SHAPING.md  UDS_SETUP.md  USERGUIDE.md  VLLM_RECIPES.md  WEB_SEARCH.md  WORKFLOW.md  nodes.md  performance.md  v2.md
pipelines/: README.md  executor_pipeline.py  executor_pipeline.yaml  manager_modelcar_pipeline.py  manager_modelcar_pipeline.yaml  manager_modelcar_pipeline_build_only.yaml  manager_modelcar_pipeline_split.py  manager_modelcar_pipeline_split.yaml  manager_modelcar_pipeline_split_build_only.yaml  model_pipeline.py  nvfp4_executor_pipeline.py  nvfp4_executor_pipeline.yaml  nvfp4_executor_pipeline_split.py  nvfp4_executor_pipeline_split.yaml  nvfp4_executor_pipeline_split_build_only.yaml  requirements.txt
scripts/: apply-blackwell-deployments.sh  apply-modelcar-deployments.sh  bootstrap-pipelines.sh  bootstrap.sh  build-images.sh  cleanup-model-pvc.sh  cleanup-pipeline-runs.py  cleanup-pipeline-runs.sh  create-pipeline-server.sh  deploy-jobs.sh  deploy.sh  download-models.sh  generate-model-configs.sh  index-apispec.sh  index-architecture.sh  index-code.sh  index-domain.sh  index-knowledge-base.sh  index-license.sh  install-rag-stack.sh  list-model-runtimes.sh  load-language-pack.sh  migrate-to-v1-models.sh  mint-ecr-credentials.sh  mirror-models-to-ecr.sh  run-model-pipeline.sh  run-pipelines.py  run-pipelines.sh  sync-ecr-credentials.sh  sync-openwebui-feedback.sh  test-intent.py  upload-models-s3.sh  validate-intent-live.py  verify-gpu-usage.sh
(+394 files in other folders)
