[project]
name = "synesis"
version = "0.1.0"
description = "A resilient, Safety-II aligned LLM code assistant on OpenShift AI"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "S101",  # allow assert in non-test code (used in state validation)
    "S104",  # binding to all interfaces is intentional for containers
    "S603",  # subprocess calls are used intentionally in sandbox/LSP
    "S607",  # partial executable path is fine in containers
    "B008",  # function call in default arg (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101"]
"**/tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
