[project]
name = "synesis"
version = "0.1.0"
description = "A resilient, Safety-II aligned LLM code assistant on OpenShift AI"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "S101",   # allow assert in non-test code (used in state validation)
    "S104",   # binding to all interfaces is intentional for containers
    "S108",   # hardcoded /tmp is fine in containers with emptyDir mounts
    "S110",   # try-except-pass is used intentionally for optional deps
    "S112",   # try-except-continue is used in batch indexers by design
    "S603",   # subprocess calls are used intentionally in sandbox/LSP
    "S607",   # partial executable path is fine in containers
    "B007",   # unused loop variables are acceptable in iteration patterns
    "B008",   # function call in default arg (FastAPI Depends pattern)
    "B905",   # zip() without strict= is fine for matched iterables
    "E402",   # module-level import not at top (conditional imports)
    "E741",   # ambiguous variable names acceptable in tight loops
    "SIM102", # nested if is sometimes more readable than collapsed
    "SIM108", # ternary is not always clearer than if/else
    "UP042",  # str+Enum pattern is intentional for JSON serialization
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101"]
"**/tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
